<resources>
    <string name="app_name">서울책터</string>
    <string name="action_settings">Settings</string>
    <string name="API_KEY">AIzaSyASJwXT9Re0ZVtQPG5KU6NtbfiKGdK4s9Y</string>

    <string name="license_tedpermission"><b>TedPermission</b>\nhttps://github.com/ParkSangGwon/TedPermission\n\nCopyright 2016 Ted Park\n\nLicensed under the Apache License, Version 2.0 (the "License");you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.```\n------------------------------</string>
    <string name="license_fabtransitionLayout"><b>FabTransitionLayout</b>\nhttps://github.com/bowyer-app/FabTransitionLayout\n\nCopyright (c) 2015 Bowyer\n\nReleased under the MIT license\n\nhttp://opensource.org/licenses/mit-license.php\n------------------------------</string>
    <string name="license_materialsheetfab"><b>material-sheet-fab</b>\nhttps://github.com/gowong/material-sheet-fab\n\nThe MIT License (MIT)\n\nCopyright (c) 2015 Gordon Wong\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n------------------------------</string>
    <string name="license_glide"><b>glide</b>\nhttps://github.com/bumptech/glide\n\nBSD, part MIT and Apache 2.0. See the LICENSE file for details.\n------------------------------</string>
    <string name="license_zxingandroidembedded"><b>zxing-android-embedded</b>\nhttps://github.com/journeyapps/zxing-android-embedded\n\nApache License 2.0\n------------------------------</string>
    <string name="license_okhttp"><b>okhttp</b>\nhttps://github.com/square/okhttp\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n------------------------------</string>
    <string name="license_seoul"><b>서울서체</b>\nhttp://www.seoul.go.kr/v2012/seoul/symbol/font.html\n\n서울서체는 누구나 무료로 다운로드 받아 자유롭게 사용할 수 있습니다.\n------------------------------</string>
    <string name="license_interpark"><b>인터파크 도서 API</b>\nhttp://book.interpark.com/blog/bookpinion/bookpinionOpenAPIInfo.rdo?\n------------------------------</string>
    <string name="license_library"><b>서울시 도서관 위치정보 (좌표계 : WGS1984)</b>\nhttp://data.seoul.go.kr/openinf/mapview.jsp?infId=OA-1326\n------------------------------</string>
</resources>
