<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#ffffff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="#38924a">
        <ImageView
            android:id="@+id/imageview_informaiton_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_back"/>
        <TextView
            android:id="@+id/textview_information_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imageview_informaiton_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:text="서울책터에 대하여"
            android:textSize="20dp"
            android:textColor="#ffffff"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#38924a">
        <ImageView
            android:id="@+id/imageview_information_symbol"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_launcher_48dp"/>
        <TextView
            android:id="@+id/textview_information_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview_information_symbol"
            android:layout_marginTop="2dp"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:text="서울책터 v1.0.0."/>
        <TextView
            android:id="@+id/textview_information_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:textSize="10dp"
            android:textColor="#ffffff"
            android:text="Copyright 2016 indieAir. All Rights Reserved"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/license_tedpermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_tedpermission"/>
            <TextView
                android:id="@+id/license_fabtransitionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_fabtransitionLayout"/>
            <TextView
                android:id="@+id/license_materialsheetfab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_materialsheetfab"/>
            <TextView
                android:id="@+id/license_glide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_glide"/>
            <TextView
                android:id="@+id/license_zxingandroidembedded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_zxingandroidembedded"/>
            <TextView
                android:id="@+id/license_okhttp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_okhttp"/>
            <TextView
                android:id="@+id/license_seoul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_seoul"/>
            <TextView
                android:id="@+id/license_interpark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_interpark"/>
            <TextView
                android:id="@+id/license_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="10dp"
                android:text="@string/license_library"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>